css/main.css
@charset "UTF-8";
/* CSS Document */
body {
	color: #003;
	font-family: 'Quicksand' , sans-serif;
	font-size: 16px;
	line-height: 1.3;
	margin: 0;
	padding: 0;
}
/* div wrapper to set width----------------------*/
#wrapper {
	width: 960px;
	margin: 0 auto;
}
/* heading elements--------------*/	
h1, h2, h3, h4, h5, h6 {
	margin: 0;
	padding: 8px 10px;
}
/* p-elements---------------*/
p {
	margin: 0;
	padding: 8px 10px;
}
/* header--------------------------------------*/
header {
	background: rgba(153,255,255,0.75);
	width: 960px;
	clear: none;
}
/* header nav ul--------------------------------------*/
header ul {
	width: 940px;
	margin: 0 auto;
	list-style-type: none;
	padding: 0;
	float: none;
}
/* header nav li---------------------------------------*/
header ul li {
	width: 235px;
	float: left;
	text-decoration: none;
	text-style: bold;
	/*display: inline;
	margin: 25px;
	padding: 10px;*/
}
/* footer----------------------------------------*/
footer {
	background: rgba(153,255,255,0.75);
	margin-top: 0;
}
footer ul {
	width: 940px;
	margin: 0 auto;
	list-style-type: none;
}
/* footer nav-------------------------------------*/
footer ul li {
	width: 235px;
	display: inline;
	margin: 25px;
	padding: 10px;
}
/* gallery-----------------------------------------*/
#gallery {
	background: rgba(204,204,204,0.50);
	margin-bottom: 0;
}
/* aside owl facts---------------------------------*/
aside {
	background: rgba(153,255,255,0.75);
	border-top: 1px solid #999;
	border-bottom: 1px solid #999;
	border-left: 1px solid #999;
	float: right;
	padding: 30px 30px 30px 30px;
}
/* owl facts header----------------------------------*/
aside h3 {
	text-align: center;
	text-shadow: 1px 1px 2px #003;
}
/* ancient knowledge section ----------------------*/
#ancientknowledge {
	background: #CCC;
}
/* main content (Snowy Owls) -------------------------------*/
#main_section {
	background: #CCC;
	margin-top:0 ;
	margin-bottom: 0;
}
/* Snowy Owl paragraphs made into two columns because three columns didn't look good with the aside ----------*/
.column_text {
    -moz-column-count: 2; 
    -webkit-column-count: 2; 
    column-count: 2;
}
/* about us ---------------------------------------*/
#aboutus {
	background: #CCC;
	margin-top: 0;
	margin-bottom: 0;
}
/* still trying to wipe out the margins and whitespace---------*/
#aboutus h2 {
	margin-top: 0;
}
/* sign up section --------------------------------*/
#signup {
	background: #CCC;
}
/* Knowledge.com indented off of the page-------------*/
header h1 {
	margin: 0;
	text-indent: -1000px;
}
/* aside ul -------------------------------------------*/
aside ul {
	list-style-type: square;
}
/* owls during the ancient greek era --------------------*/
#ancient_article {
	float: none;
}
/* ancient knowledge image---------------------------------*/
#ancientknowledge img {
	float: right;
}
/* gallery images ----------------------------------------*/
section ul li {
	display: inline;
	margin-bottom: 0;
}
/* gallery ul--------------------------------------------*/
section ul {
	margin-bottom: 0:
}
/* sign up button----------------------------------------*/
.button {
	font-family: 'Quicksand', sans-serif;
	font-size: 24px;
	background-color: #ff5600;
	border: none;
	border-radius: 4px;
	box-shadow: 2px 2px 2px #333;
	margin: 30px 0 10px 26px;
	text-shadow: 1px 1px 3px #FFF;
	width: 150px;
	height: 40px;
}
a {
	text-decoration: none;
	text-style: bold;
}
/* different color link states------------------*/
a:link {
	color: #ff5600;
}
a:visited {
	color: #003;
}
a:hover {
	color: #666;
}
a:active {
	color: #FFF;
}
/* attempting to get rid of margins and whitespace---------------------*/
blockquote {
	margin-bottom: 0;
}
footer ul {
	margin-top: 0;
}
img {
	margin-bottom: 0;
}
#home img {
	float: left;
	padding-top: 10px;
}
header p {
	padding-bottom: 5px;
}

